creating login page and link in home page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
     <!--Navbar-->
     <a href="index.html">Home</a> &nbsp;&nbsp;
-    <a href="#">Login</a> &nbsp;&nbsp; <a href="#">Register</a> &nbsp;&nbsp;
+    <a href="login.html">Login</a> &nbsp;&nbsp;
+    <a href="#">Register</a> &nbsp;&nbsp;
     <a href="#">Contact us</a> &nbsp;&nbsp; <a href="#">Carrier</a> &nbsp;&nbsp;
     <br /><br /><br />
 
