--- a/Register.html
+++ b/Register.html
@@ -20,19 +20,37 @@
     <!--Navbar-->
     <a href="index.html">Home</a> &nbsp;&nbsp;
     <a href="login.html">Login</a> &nbsp;&nbsp;
-    <a href="Register.html">Register</a> &nbsp;&nbsp;
+    <a href="#">Register</a> &nbsp;&nbsp;
     <a href="#">Contact us</a> &nbsp;&nbsp; <a href="#">Carrier</a> &nbsp;&nbsp;
     <br /><br /><br />
 
     <center>
       <form>
-        <h3>Login Form</h3>
+        <h3>Register Form</h3>
         <label for="username">Username</label>
         <input type="text" id="username" />
+        <br /><br />
+        <label for="email">Email</label>
+        <input type="email" id="email" />
         <br /><br />
         <label for="password">Password</label>
         <input type="password" id="password" />
         <br /><br />
+        <label for="state">State</label>
+        <select name="" id="state">
+          <option>--select--</option>
+          <option>Kolkata</option>
+          <option>Hyderabad</option>
+          <option>Mumbai</option>
+        </select>
+        <br /><br />
+        <label>Select Gender</label>
+        <input type="radio" id="male" name="gender" value="male" />Male
+        <input type="radio" id="female" name="gender" value="female" />Female
+        <input type="radio" id="other" name="gender" value="other" />Other
+
+        <br /><br />
+        <input type="checkbox" /> I agree to terms and conditions <br /><br />
         <button>Login</button>
       </form>
     </center>
