--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!--Navbar-->
     <a href="index.html">Home</a> &nbsp;&nbsp;
     <a href="login.html">Login</a> &nbsp;&nbsp;
-    <a href="#">Register</a> &nbsp;&nbsp;
+    <a href="Register.html">Register</a> &nbsp;&nbsp;
     <a href="#">Contact us</a> &nbsp;&nbsp; <a href="#">Carrier</a> &nbsp;&nbsp;
     <br /><br /><br />
 
